--- a/index.html
+++ b/index.html
@@ -435,15 +435,15 @@ Datos de contacto:
 
 { name: 'AIRE ACONDICIONADO',
   body:
-    'ASI-124A TIPO A – 10007693\n-----------------------------------\n' +
-    'ASI-124I TIPO A – 10007695\n-----------------------------------\n' +
-    'ASI-124I TIPO A – 10007695\n-----------------------------------\n' +
-    'ASI-244I TIPO A – 10007699\n-----------------------------------\n' +
-    'ASI-244A TIPO A – 10007697\n-----------------------------------\n' +
-    'ASI-125A TIPO A – 10026114\n-----------------------------------\n' +
-    'ASI-185A TIPO A – 10026115\n-----------------------------------\n' +
-    'ASI-365A TIPO A – 10026116\n-----------------------------------\n' +
-    'ASI-121I – 10034533'
+    '10007693 – ASI-124A TIPO A\n-----------------------------------\n' +
+    '10007695 – ASI-124I TIPO A\n-----------------------------------\n' +
+    '10007695 – ASI-124I TIPO A\n-----------------------------------\n' +
+    '10007699 – ASI-244I TIPO A\n-----------------------------------\n' +
+    '10007697 – ASI-244A TIPO A\n-----------------------------------\n' +
+    '10026114 – ASI-125A TIPO A\n-----------------------------------\n' +
+    '10026115 – ASI-185A TIPO A\n-----------------------------------\n' +
+    '10026116 – ASI-365A TIPO A\n-----------------------------------\n' +
+    '10034533 – ASI-121I'
 },
 
 { name: 'ELECTROMENORES (1 de 2)',
