--- a/index.html
+++ b/index.html
@@ -488,7 +488,13 @@ Datos de contacto:
     '10028889 – HERVIDOR DE AGUA IND IHCR24 CR 1.7L'
 },
 
-
+      {
+  name: 'SECADORAS',
+  body:
+    '10004981 – SEC-20BLA\n-----------------------------------\n' +
+    '10003906 – SEC-20DGR\n-----------------------------------\n' +
+    '10008622 – SEC-21FRC – APILABLE'
+},
 //UTILITARIOS
 
 
