--- a/index.html
+++ b/index.html
@@ -401,12 +401,13 @@ Datos de contacto:
     '10020951 – 65TISQ20UHD'
 },
 
-{ name: 'LAVADORAS',
- 
+{
+  name: 'LAVADORAS',
   body:
     '10000385 – SEMIAUT LRI-13BLSA DOBLE TINA\n-----------------------------------\n' +
     '10000302 – SEMIAUTOMATICA LRI-11BLSA\n-----------------------------------\n' +
     '10000062 – SEMIAUTO LRI-15BLSA\n-----------------------------------\n' +
+    '10008600 – LRI-15DGR\n-----------------------------------\n' +   // ← agregado
     '10030705 – AUTOMATICA LRI-16DGR\n-----------------------------------\n' +
     '10000393 – AUTOMATICA LRI-16BLA\n-----------------------------------\n' +
     '10000386 – AUTOMATICA LRI-19BLA\n-----------------------------------\n' +
