--- a/index.html
+++ b/index.html
@@ -765,21 +765,24 @@ COLINEAL CORPORATION CIA LTDA`
       },
 
       // ================= QUITO =================
-      { name: 'Técnicos Quito',
-        body:
-          'ESMERALDAS GOMEZ NELSON JOEL – 0980040587\n' +
-          'GUAMANGALLO TERAN JUAN CARLOS – 0959604935\n' +
-          'OBANDO FUERTES FREDY ULPIANO – 0988861421\n' +
-          'PALLO AMAGUAYA JOHNNY SANTIAGO – 0968256141\n' +
-          'PANCHI LEMA CESAR FERNANDO – 0993282122\n' +
-          'QUELAL CALDERON HOMERO MANUEL – 0992080562\n' +
-          'QUIMBITA PANCHI ERICK ALEXANDER – 0985809884\n' +
-          'MONSERRATE BORJA DIEGO MIGUEL – 0990743368\n' +
-          'HIDALGO MIRANDA JUAN CARLOS – 0990975781\n' +
-          'YUQUILEMA PILLIZA DIEGO STALIN – 0939900744\n' +
-          'LAZO JOSE – 0990659802\n' +
-          'CEVALLOS OSWALDO – 0997096609'
-      },
+     {
+  name: 'Técnicos Quito',
+  body:
+    'ESMERALDAS GOMEZ NELSON JOEL – 0980040587\n' +
+    'GUAMANGALLO TERAN JUAN CARLOS – 0959604935\n' +
+    'OBANDO FUERTES FREDY ULPIANO – 0988861421\n' +
+    'PALLO AMAGUAYA JOHNNY SANTIAGO – 0968256141\n' +
+    'PANCHI LEMA CESAR FERNANDO – 0993282122\n' +
+    'QUELAL CALDERON HOMERO MANUEL – 0992080562\n' +
+    'QUIMBITA PANCHI ERICK ALEXANDER – 0985809884\n' +
+    'MONSERRATE BORJA DIEGO MIGUEL – 0990743368\n' +
+    'HIDALGO MIRANDA JUAN CARLOS – 0990975781\n' +
+    'YUQUILEMA PILLIZA DIEGO STALIN – 0939900744\n' +
+    'LAZO JOSE – 0990659802\n' +
+    'CEVALLOS OSWALDO – 0997096609\n' +
+    'LUISA HIPATIA PLUA PILLASAGUA – 0980098308\n-----------------------------------\n' +
+    'JONATHAN RAMIREZ  – 0985814354'
+},
 
       // ================= SANTO DOMINGO =================
       { name: 'Técnicos Santo Domingo',
