--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ COLINEAL CORPORATION CIA LTDA`
       },
 
       // ================= QUITO =================
-     {
+{
   name: 'Técnicos Quito',
   body:
     'ESMERALDAS GOMEZ NELSON JOEL – 0980040587\n' +
@@ -780,8 +780,8 @@ COLINEAL CORPORATION CIA LTDA`
     'YUQUILEMA PILLIZA DIEGO STALIN – 0939900744\n' +
     'LAZO JOSE – 0990659802\n' +
     'CEVALLOS OSWALDO – 0997096609\n' +
-    'LUISA HIPATIA PLUA PILLASAGUA – 0980098308\n-----------------------------------\n' +
-    'JONATHAN RAMIREZ  – 0985814354'
+    'LUISA HIPATIA PLUA PILLASAGUA – 0980098308\n' +
+    'JONATHAN RAMIREZ – 0985814354'
 },
 
       // ================= SANTO DOMINGO =================
