--- a/index.html
+++ b/index.html
@@ -380,7 +380,8 @@ Datos de contacto:
     '10000402 – HEI-75ENDF'
 },
 
-{ name: 'TELEVISORES',
+ {
+  name: 'TELEVISORES',
   body:
     '10033945 – 32TIKGF5HD Google Tv 5.0\n-----------------------------------\n' +
     '30001009 – 32TIKGF2HD Android 11.0\n-----------------------------------\n' +
@@ -398,7 +399,11 @@ Datos de contacto:
     '10004054 – 55TISG3AUHD\n-----------------------------------\n' +
     '10036494 – 55TISG4FQLED Google Tv\n-----------------------------------\n' +
     '10033823 – 65TIKGF5QLED Google Tv 5.0\n-----------------------------------\n' +
-    '10020951 – 65TISQ20UHD'
+    '10020951 – 65TISQ20UHD\n-----------------------------------\n' +
+    '30000944 – 58TISU20UHD1\n-----------------------------------\n' +
+    '10020947 – 58TIKGF2UHD Android 11.0\n-----------------------------------\n' +
+    '10012171 – 58TIKGFUHD4K\n-----------------------------------\n' +
+    '30001012 – 58TIKGFQLED'
 },
 
 {
