--- a/index.html
+++ b/index.html
@@ -1556,21 +1556,22 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="4000">
    <span slot="title">
-    <a href="boletin_octubre.pdf" download 
+    <a href="boletinnoviembre.pdf" download 
        style="color:#60a5fa; text-decoration:none; font-weight:700;">
       📄 Descargar Boletín
     </a>
   </span>
 
-  <img src="boletin_oct_1.jpg" alt="Boletín 0">
-  <img src="boletin_oct_2.jpg" alt="Boletín 1">
-  <img src="boletin_oct_3.jpg" alt="Boletín 2">
-  <img src="boletin_oct_4.jpg" alt="Boletín 3">
-  <img src="boletin_oct_5.jpg" alt="Boletín 4">
-  <img src="boletin_oct_6.jpg" alt="Boletín 5">
-  <img src="boletin_oct_7.jpg" alt="Boletín 6">
-  <img src="boletin_oct_8.jpg" alt="Boletín 7">
-  <img src="boletin_oct_9.jpg" alt="Boletín 8">
+  <img src="Noviembre1.jpg" alt="Boletín 0">
+  <img src="Noviembre2.jpg" alt="Boletín 0">
+  <img src="Noviembre3.jpg" alt="Boletín 0">
+  <img src="Noviembre4.jpg" alt="Boletín 0">
+  <img src="Noviembre5.jpg" alt="Boletín 0">
+  <img src="Noviembre6.jpg" alt="Boletín 0">
+  <img src="Noviembre7.jpg" alt="Boletín 0">
+  <img src="Noviembre8.jpg" alt="Boletín 0">
+  <img src="Noviembre9.jpg" alt="Boletín 0">
+ 
   
 
   <span slot="caption">Desliza para ver todos los boletines.</span>
