--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
 
 
 
-    <span class="pill">Última actualización 13 octubre 2025 - 16:23 </span> <span id="count" class="pill"> </span>
+    <span class="pill">Última actualización 5 noviembre 14:19  </span> <span id="count" class="pill"> </span>
 
     <p class="muted">Escribe una palabra (ejemplo: <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>).</p>
 
@@ -1551,7 +1551,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 
       /* ======= CARRUSEL AL FINAL ======= */
       {
-        name: 'Boletín Octubre ',
+        name: 'Boletín Noviembre ',
         wide: true,                 // <- hace la tarjeta de ancho completo
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="4000">
