--- a/index.html
+++ b/index.html
@@ -196,6 +196,12 @@ h5 {
     CONSOLIDADO CC
   </a>
 
+   <a class="pill" 
+     href="  https://serviandinasaec-my.sharepoint.com/:x:/r/personal/comercial_indurama_consensocorp_com/_layouts/15/Doc.aspx?sourcedoc=%7B0CEDE323-2243-47D6-A3E4-1F4154666ACA%7D&file=Cuadro%20de%20garant%25u00edas.xlsx&action=default&mobileredirect=true " 
+     target="_blank" 
+     rel="noopener noreferrer">
+    CUADRO DE GARANTÍAS
+  </a> 
 
    <a class="pill" 
      href=" https://indurama-f99b2.web.app/teamMembersClients  " 
