--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 },
 
    
- 
+  
 {
   name: 'IMPORTANTE - BOLETÍN CONTACT CENTER',
   wide: true,
@@ -1535,7 +1535,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
         <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase; color:#b91c1c;">
           Importante
         </h4>
-        <p style="margin:0;">
+        <p style="margin:0 0 12px;">
           <strong>No generar tickets para los siguientes modelos:</strong><br>
           PRAGA · BRESIA · OVIEDO · HAMBURGO · GINEBRA · EI-4PVI60 (modelo antiguo) ·  <br>
 
@@ -1547,11 +1547,23 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
           No brindar explicaciones sobre repuestos, modelos o tiempos.<br>
           Mantener la comunicación <strong>breve, clara y concreta</strong>.
         </p>
+
+        <hr style="border:0; border-top:1px solid #b6b6b6; margin:12px 0;">
+
+        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase; color:#b91c1c;">
+          Importante – Colombia
+        </h4>
+        <p style="margin:0;">
+          • Las <strong>conversiones</strong> son <strong>gratuitas</strong>.<br>
+          • Las <strong>instalaciones</strong> en <strong>Bogotá</strong> y <strong>Bucaramanga</strong> son <strong>gratuitas</strong>.<br>
+          <em>(Aplica únicamente para cocinas.)</em>
+        </p>
       </div>
     </div>
   `
 },
 
+ 
 
 
 
