--- a/index.html
+++ b/index.html
@@ -1472,8 +1472,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 },
 
    
-  
-{
+  {
   name: 'IMPORTANTE - BOLETÍN CONTACT CENTER',
   wide: true,
   body: `
@@ -1532,9 +1531,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 
         <hr style="border:0; border-top:1px solid #9ca3af; margin:12px 0;">
 
-        <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase; color:#b91c1c;">
-          Importante
-        </h4>
+     
         <p style="margin:0 0 12px;">
           <strong>No generar tickets para los siguientes modelos:</strong><br>
           PRAGA · BRESIA · OVIEDO · HAMBURGO · GINEBRA · EI-4PVI60 (modelo antiguo) ·  <br>
@@ -1551,7 +1548,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
         <hr style="border:0; border-top:1px solid #b6b6b6; margin:12px 0;">
 
         <h4 style="margin:0 0 6px; font-size:15px; text-transform:uppercase; color:#b91c1c;">
-          Importante – Colombia
+           Colombia
         </h4>
         <p style="margin:0;">
           • Las <strong>conversiones</strong> son <strong>gratuitas</strong>.<br>
@@ -1562,7 +1559,7 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
     </div>
   `
 },
-
+ 
  
 
 
