--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ dialog.viewer::backdrop{background:rgba(0,0,0,.7)}
 
 
 
-    <span class="pill">Última actualización 5 noviembre 14:19  </span> <span id="count" class="pill"> </span>
+    <span class="pill">Última actualización 13 octubre 2025 - 16:23 </span> <span id="count" class="pill"> </span>
 
     <p class="muted">Escribe una palabra (ejemplo: <em>garantía</em>, <em>Perú</em>, <em>orden</em>, <em>no contactabilidad</em>).</p>
 
@@ -196,12 +196,13 @@ h5 {
     CONSOLIDADO CC
   </a>
 
-   <a class="pill" 
+  <a class="pill" 
      href="  https://serviandinasaec-my.sharepoint.com/:x:/r/personal/comercial_indurama_consensocorp_com/_layouts/15/Doc.aspx?sourcedoc=%7B0CEDE323-2243-47D6-A3E4-1F4154666ACA%7D&file=Cuadro%20de%20garant%25u00edas.xlsx&action=default&mobileredirect=true " 
      target="_blank" 
      rel="noopener noreferrer">
-    CUADRO DE GARANTÍAS
-  </a> 
+    CCUADRO DE GARANTÍAS
+  </a>
+
 
    <a class="pill" 
      href=" https://indurama-f99b2.web.app/teamMembersClients  " 
@@ -217,12 +218,19 @@ h5 {
     NOVEDADES CONTACT
   </a>
 
+
+
+
+
  <a class="pill" 
      href=" https://usertestcc.github.io/adecuaciones_boletin/ " 
      target="_blank" 
      rel="noopener noreferrer">
     ADECUACIONES
   </a>
+
+
+
 
 </div>
 
@@ -386,7 +394,7 @@ Datos de contacto:
     '10000402 – HEI-75ENDF'
 },
 
- {
+{
   name: 'TELEVISORES',
   body:
     '10033945 – 32TIKGF5HD Google Tv 5.0\n-----------------------------------\n' +
@@ -1472,7 +1480,8 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 },
 
    
-  {
+ 
+{
   name: 'IMPORTANTE - BOLETÍN CONTACT CENTER',
   wide: true,
   body: `
@@ -1559,40 +1568,87 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
     </div>
   `
 },
- 
- 
+
 
 
 
       /* ======= CARRUSEL AL FINAL ======= */
       {
-        name: 'Boletín Noviembre ',
+        name: 'Boletín Octubre ',
         wide: true,                 // <- hace la tarjeta de ancho completo
         body: `
-<x-carousel-card aspect="16/9" autoplay interval="4000">
+<x-carousel-card aspect="16/9" autoplay interval="8000">
    <span slot="title">
-    <a href="boletinnoviembre.pdf" download 
+    <a href="boletin_octubre.pdf" download 
        style="color:#60a5fa; text-decoration:none; font-weight:700;">
       📄 Descargar Boletín
     </a>
   </span>
 
-  <img src="Noviembre1.jpg" alt="Boletín 0">
-  <img src="Noviembre2.jpg" alt="Boletín 0">
-  <img src="Noviembre3.jpg" alt="Boletín 0">
-  <img src="Noviembre4.jpg" alt="Boletín 0">
-  <img src="Noviembre5.jpg" alt="Boletín 0">
-  <img src="Noviembre6.jpg" alt="Boletín 0">
-  <img src="Noviembre7.jpg" alt="Boletín 0">
-  <img src="Noviembre8.jpg" alt="Boletín 0">
-  <img src="Noviembre9.jpg" alt="Boletín 0">
- 
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526531/Instalaciones_11_25-im_%C3%ADgenes-0_pix32l.jpg " alt="Boletín 0">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526532/Instalaciones_11_25-im_%C3%ADgenes-1_va9elh.jpg " alt="Boletín 1">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-4_ebv5z9.jpg" alt="Boletín 2">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-2_fjh0fv.jpg " alt="Boletín 3">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-3_yw19do.jpg " alt="Boletín 4">
+  <img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526534/Instalaciones_11_25-im_%C3%ADgenes-6_u09vlw.jpg" alt="Boletín 5">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526533/Instalaciones_11_25-im_%C3%ADgenes-5_dh9csv.jpg " alt="Boletín 6">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526535/Instalaciones_11_25-im_%C3%ADgenes-7_szk6sy.jpg " alt="Boletín 7">
+  <img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762526536/Instalaciones_11_25-im_%C3%ADgenes-8_wdybpr.jpg " alt="Boletín 8">
   
 
   <span slot="caption">Desliza para ver todos los boletines.</span>
 </x-carousel-card>`
       },
 
+{
+        name: 'Monitores ',
+        wide: true,                 // <- hace la tarjeta de ancho completo
+        body: `
+<x-carousel-card aspect="16/9" autoplay interval="8000">
+   <span slot="title">
+     
+  </span>
+
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_2_ksiwbs.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_1_ytkzjn.jpg " alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_5_zvvrt2.jpg" alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522253/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_3_kj3t5v.jpg " alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_6_u1jb3s.jpg" alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_7_gnozce.jpg" alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_4_mhv4hr.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522254/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_8_hdhf7h.jpg " alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522255/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_9_kd3hhs.jpg" alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_10_b44zp4.jpg " alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_11_jphvc4.jpg" alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522257/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_12_zoxzdy.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522258/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_13_fkmgke.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522258/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_14_fglqj1.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_16_gnbrwi.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_15_wxo14l.jpg " alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522259/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_17_lstrrm.jpg" alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522260/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_18_gqep86.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522261/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_19_xz9tuc.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522262/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_22_f9p6n2.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522262/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_21_mvqwqc.jpg " alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522261/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_20_ugfae9.jpg" alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522263/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_23_w06bqj.jpg" alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522263/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_24_w8yuou.jpg" alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522264/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_25_xvsbn6.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522265/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_27_jqpucr.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522264/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_26_sz3gfr.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_30_p5essi.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_28_h3jahv.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522266/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_31_ryplrh.jpg " alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522267/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_32_ngmw0i.jpg " alt="Boletín 0">
+<img src=" https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522265/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_29_vypitx.jpg" alt="Boletín 0">
+<img src="https://res.cloudinary.com/dwbrg9r2n/image/upload/v1762522267/1762521117213-0050fce9-fd12-423a-abe6-798b21a8cc9d_33_as36e1.jpg " alt="Boletín 0">
+ 
+
+  
+
+  <span slot="caption">Desliza para ver todos los boletines.</span>
+</x-carousel-card>`
+      },
 
       
     ];
@@ -1623,6 +1679,19 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
       const re = new RegExp(`(${esc})`,'ig');
       return text.replace(re,'<span class="hl">$1</span>');
     }
+
+
+
+/////////////
+
+
+
+
+
+
+
+
+
 
     function render(list, term=''){
       grid.innerHTML = '';
