--- a/index.html
+++ b/index.html
@@ -1574,12 +1574,12 @@ Avenida de la Cultura, Plaza Comercial Ecopark, Galpón 105
 
       /* ======= CARRUSEL AL FINAL ======= */
       {
-        name: 'Boletín Octubre ',
+        name: 'Boletín Noviembre ',
         wide: true,                 // <- hace la tarjeta de ancho completo
         body: `
 <x-carousel-card aspect="16/9" autoplay interval="8000">
    <span slot="title">
-    <a href="boletin_octubre.pdf" download 
+    <a href="boletin_nov_ok.pdf" download 
        style="color:#60a5fa; text-decoration:none; font-weight:700;">
       📄 Descargar Boletín
     </a>
